# GDB-Tech-Test

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md
Data/: TestData.csv
src/: MathsHelper.h  Solver.h  Vector2.h  main.cpp
tests/: CMakeLists.txt  tests.cpp
